--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Desafio UPD8"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2t6R76nMEskHemO+YMdde6GNfun9K97Rq257+Y/TuOQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -50,3 +50,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+L5_SWAGGER_GENERATE_ALWAYS=true
